[tool.poetry]
name = "respan-exporter-agno"
version = "1.0.1"
description = "Respan exporter for Agno traces"
authors = ["Respan <team@respan.ai>"]
readme = "README.md"
packages = [{include = "respan_exporter_agno", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
requests = "^2.32.5"
wrapt = "^1.16.0"
opentelemetry-sdk = "^1.20.0"
opentelemetry-api = "^1.20.0"
opentelemetry-instrumentation = "^0.41b0"
respan-sdk = ">=2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
agno = ">=1.5.2"
openinference-instrumentation-agno = "^0.1.0"
openai = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
